# py2graphql

./: .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py  test_py2graphql.py
py2graphl/: tests.py
py2graphql/: __init__.py  core.py  exception.py  middleware.py  serialization.py  tests.py  types.py
