[tool.poetry]
name = "py2graphql"
version = "0.15.0"
description = "Pythonic GraphQL Client"
authors = ["Willem Thiart <himself@willemthiart.com>"]
include = ["py2graphql/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
addict = "^2.2.1"
aiohttp = "^3.6.2"
requests = "^2.24.0"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
graphql-core = "^3.2.1"
hypothesis = "^6.46.9"
mock = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
