[tool.poetry]
name = "py2graphql"
version = "0.21.0"
description = "Pythonic GraphQL Client"
readme = "README.rst"
authors = ["Willem Thiart <himself@willemthiart.com>"]
keywords = ["graphql"]
license = "MIT"
include = ["py2graphql/py.typed"]
homepage = "https://github.com/willemt/py2graphql"
repository = "https://github.com/willemt/py2graphql"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
tenacity = ">=6.2.0,<10.0.0"

addict = { version = "^2.2.1", optional = true }
aiohttp = { version = "^3.6.2", optional = true }
httpx = { version = "^0.23.0", optional = true }
requests = { version = "^2.24.0", optional = true }

[tool.poetry.extras]
aiohttp = ["aiohttp"]
httpx = ["httpx"]
all = ["aiohttp", "httpx"]

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
graphql-core = "^3.2.1"
hypothesis = "^6.46.9"
mock = "^4.0.3"

[tool.poetry.group.dev.dependencies]
asynctest = "^0.13.0"
hypothesis = "^6.127.2"
pytest = "^8.3.4"
requests = "^2.32.3"
aiohttp = "^3.11.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
